--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "click>=8.1.7",
     "pydantic>=2.5.0",
     "pyyaml>=6.0.1",
+    "packaging>=23.0",
 
     # Database
     "sqlalchemy>=2.0.23",
