feat: Add Zstandard (.zst) compression support for RPM metadata
Implements Issue #23 - Add full read/write support for Zstandard compression
in RPM repositories, enabling support for openSUSE Tumbleweed and future distributions.

## Changes

### Dependencies
- Added `zstandard>=0.22.0` to pyproject.toml

### Configuration (src/chantal/core/config.py)
- Added `MetadataConfig` class with configurable compression format
- Added `metadata` field to `RepositoryConfig`
- Supported formats: auto, gzip, zstandard, bzip2, none
- Default: "auto" (detect from upstream)

### Compression Library (src/chantal/plugins/rpm/compression.py)
- New module with compression helper functions
- `detect_compression()`: Detect format from filename
- `compress_file()`: Compress data with any supported format
- `decompress_file()`: Decompress data with any supported format
- `detect_compression_from_repomd()`: Auto-detect upstream compression
- `add_compression_extension()`: Add correct file extension

### Reading Metadata (src/chantal/plugins/rpm/parsers.py)
- Added zstandard import
- Updated `_decompress_metadata()` to handle .zst files
- Added magic byte detection for zstandard (0x28 0xb5 0x2f 0xfd)

### Writing Metadata (src/chantal/plugins/rpm/publisher.py)
- Added compression parameter to `_publish_packages()`
- Updated `_generate_primary_xml()` to use configurable compression
- Updated `_generate_repomd_xml()` to calculate open-checksum for .zst
- Updated `_filter_and_regenerate_updateinfo()` to handle .zst
- Updated `_filter_and_regenerate_filelists()` to handle .zst
- Updated `_filter_and_regenerate_other()` to handle .zst
- Added `_detect_upstream_compression()` helper for auto mode

### Documentation (docs/plugins/rpm-plugin.md)
- Updated features list to include Zstandard support
- Added "With Custom Compression" configuration example
- Documented all compression options (auto, gzip, zstandard, bzip2, none)
- Added note about openSUSE Tumbleweed compatibility

## Compression Behavi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ dependencies = [
     "requests>=2.31.0",
     "urllib3>=2.1.0",
 
+    # Compression
+    "zstandard>=0.22.0",
+
     # Progress & UI
     "tqdm>=4.66.0",
     "rich>=13.7.0",
