docs: Add development guidelines and enforce mypy in CI
- Add comprehensive type annotation guidelines to CONTRIBUTING.md
- Add common typing patterns and examples
- Change mypy CI check from continue-on-error: true to false
- Type checking is now strictly enforced for all new code

--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -56,9 +56,9 @@ jobs:
         run: |
           echo "Running mypy type checker..."
           mypy src/chantal/ --ignore-missing-imports
-        continue-on-error: true
-        # Note: MyPy has 85 pre-existing type errors that need to be fixed
-        #       Set to continue-on-error: true until these are resolved
+        continue-on-error: false
+        # Type checking is now enforced - all code must pass mypy
+        # See CONTRIBUTING.md for type annotation guidelines
 
       - name: Run pytest
         run: |
