feat: Add yamllint to CI pipeline and fix YAML formatting
- Add yamllint>=1.35.0 to dev dependencies
- Create .yamllint configuration file
- Add yamllint step to GitHub Actions workflow
- Fix comment indentation in all YAML examples
- Fix multi-level indentation in commented-out config blocks

--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -52,6 +52,12 @@ jobs:
           black --check --diff src/chantal/ tests/
         continue-on-error: false
 
+      - name: Run yamllint (YAML linting)
+        run: |
+          echo "Linting YAML files..."
+          yamllint examples/ .dev/ .github/
+        continue-on-error: false
+
       - name: Run mypy (type checking)
         run: |
           echo "Running mypy type checker..."
