--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dev = [
     "mypy>=1.7.0",
     "black>=23.11.0",
     "ruff>=0.1.6",
+    "yamllint>=1.35.0",
     "types-PyYAML>=6.0.12",
     "types-requests>=2.31.0",
 ]
