--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Run yamllint (YAML linting)
         run: |
           echo "Linting YAML files..."
-          yamllint examples/ .dev/ .github/
+          yamllint --strict examples/ .dev/ .github/
         continue-on-error: false
 
       - name: Run mypy (type checking)
