ci: Prevent duplicate workflow runs for PR branches
Only trigger lint-and-type-check workflow on:
- Pull requests targeting main
- Direct pushes to main

This prevents duplicate runs when pushing to a branch that has an open PR,
since the PR event will trigger the workflow anyway.

--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -3,10 +3,10 @@ name: Lint and Type Check
 on:
   push:
     branches:
-      - '**'
+      - main  # Only run on pushes to main (direct commits)
   pull_request:
     branches:
-      - main
+      - main  # Run on all PRs targeting main
 
 jobs:
   lint-and-type-check:
