fix: Remove invalid {{branch}} template from Docker tag
The docker/metadata-action does not support {{branch}} as a template variable
in the prefix field. This was causing invalid Docker tags like ':-93eb296'.

Changed from:
  type=sha,prefix={{branch}}-

To:
  type=sha

This will generate tags like 'sha-93eb296' instead of the invalid ':-93eb296'.

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -54,7 +54,7 @@ jobs:
             # Tag with major on git tags (e.g., v1.0.0 -> 1)
             type=semver,pattern={{major}}
             # Tag with git SHA for traceability
-            type=sha,prefix={{branch}}-
+            type=sha
           labels: |
             org.opencontainers.image.title=Chantal
             org.opencontainers.image.description=Unified offline repository mirroring for RPM and APT
