fix: Remove .dev/ from yamllint check in CI
The .dev/ directory is not present in all branches and should not be
checked by yamllint in CI. Only check examples/ and .github/ directories
which are always present.

--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Run yamllint (YAML linting)
         run: |
           echo "Linting YAML files..."
-          yamllint --strict examples/ .dev/ .github/
+          yamllint --strict examples/ .github/
         continue-on-error: false
 
       - name: Run mypy (type checking)
