--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dev = [
     "pytest-asyncio>=0.21.1",
     "pytest-cov>=4.1.0",
     "mypy>=1.7.0",
-    "black>=23.11.0",
+    "black==24.10.0",  # Pinned to ensure consistent formatting across environments
     "ruff>=0.1.6",
     "yamllint>=1.35.0",
     "types-PyYAML>=6.0.12",
